# MetalZcurra

./: .gitignore  Arma.cpp  Arma.h  Background.cpp  Background.h  Bala.cpp  Bala.h  BalaShotgun.cpp  BalaShotgun.h  BalasManager.cpp  BalasManager.h  Bonus.cpp  Bonus.h  BonusManager.cpp  BonusManager.h  Boss.cpp  Boss.h  CMakeLists.txt  Cliente.cpp  Cliente.h  ClientePOO.cpp  ClientePOO.h  DaiManji.cpp  DaiManji.h  DiCokka.cpp  DiCokka.h  Direccion.cpp  Direccion.h  Enemigo.cpp  Enemigo.h  EnemigosManager.cpp  EnemigosManager.h  Envolvente.cpp  Envolvente.h  FinalScreen.cpp  FinalScreen.h  GameObject.cpp  GameObject.h  GravedadManager.cpp  GravedadManager.h  (+114 more)
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: juego.language.settings.xml  servidor.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/juego/: .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/servidor/: .markers
.metadata/.plugins/org.eclipse.core.resources/.root/: 11.tree  7.tree  9.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: juego Debug.launch  juego.launch  servidor Debug.launch  servidor.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.ui.workbench.swt/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.search/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
goku/: gokuCorriendo.xcf  gokuParado.xcf  probando.xcf
imag/sprites/Dai-Manji/: README.txt
imag/sprites/Di-Cokka/: README.txt
juego/: .cproject  .project
juego/src/: Cliente.cpp  Cliente.h  Juego.cpp
juego/src/utils/: HandleJump.cpp  HandleJump.h  HandleKeyHold.cpp  HandleKeyHold.h  Heartbeat.cpp  Heartbeat.h
juego/src/views/: Background.cpp  Background.h  Layer.cpp  Layer.h  Textura.h  VistaPersonaje.cpp  VistaPersonaje.h
maps/: city.xml  hangar.xml  train.xml  train2.xml
maps/train/: train.xml
marco/: caminando60*80.xcf  corriendo.xcf  corriendo2.xcf  quieto2.xcf  quieto3.xcf  saltando2.xcf  saltando3.xcf  saltando30*48.xcf
servidor/: .cproject  .project
servidor/resources/: juego.xml
servidor/src/: Mensaje.cpp  Mensaje.h  Servidor.cpp
servidor/src/model/: Personaje.cpp  Personaje.h
servidor/src/utils/: Log.h  ObjectManager.cpp  ObjectManager.h  ParserXML.cpp  ParserXML.h
servidor/src/utils/protocolos/: ProtocoloComando.cpp  ProtocoloComando.h  ProtocoloNuevaVista.cpp  ProtocoloNuevaVista.h  ProtocoloVistaUpdate.cpp  ProtocoloVistaUpdate.h
servidor/src/utils/threads/: HandleJumpServer.cpp  HandleJumpServer.h  HandleKeyHoldServer.cpp  HandleKeyHoldServer.h  HandleQuietoServer.cpp  HandleQuietoServer.h
src/: main.cpp
(+57 files in other folders)
